# Noma

./: .env  README.md  agents.py  app.py  data_processing.py  main.py  pyproject.toml  requirements.txt  server.py  tools.py
data/: merchant_cls.json
data/prompts/: data_analyzer_prompt.txt  goal_setter_prompt.txt  marketer_prompt.txt  summarizer_prompt.txt
settings/: config.json  payload.json
