[project]
name = "2025_bigcon"
version = "0.1.0"
description = "2025 bigcon overfitters"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "holidayskr==0.2.0",
    "langchain-core==0.3.79",
    "langchain-google-genai==2.1.12",
    "langchain-mcp-adapters==0.1.11",
    "langgraph==0.6.10",
    "mcp==1.16.0",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "protobuf==6.32.1",
    "pydantic==2.12.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "streamlit==1.49.1",
]

